--- a/app/views/antibody/v7/order-test-kit/previous-infection.html
+++ b/app/views/antibody/v7/order-test-kit/previous-infection.html
@@ -1,19 +1,10 @@
 {% set version = "v7" %}
-{% set pageTitle = "Have you tested positive before?" %}
+{% set pageTitle = "Have you tested positive for coronavirus before?" %}
 
 {% extends "includes/layout.html" %}
 
 {% block beforeContent %}
-  <div class="govuk-phase-banner">
-    <p class="govuk-phase-banner__content">
-      <strong class="govuk-tag govuk-phase-banner__content__tag">
-        alpha
-      </strong>
-      <span class="govuk-phase-banner__text">
-        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-      </span>
-    </p>
-  </div>
+
 
 
   <a class="govuk-back-link" href="/antibody/{{version}}/order-test-kit/have-you-had-symptoms">Back</a>
