--- a/app/views/antibody/v7/order-test-kit/vaccine.html
+++ b/app/views/antibody/v7/order-test-kit/vaccine.html
@@ -4,21 +4,8 @@
 {% extends "includes/layout.html" %}
 
 {% block beforeContent %}
-  <div class="govuk-phase-banner">
-    <p class="govuk-phase-banner__content">
-      <strong class="govuk-tag govuk-phase-banner__content__tag">
-        alpha
-      </strong>
-      <span class="govuk-phase-banner__text">
-        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-      </span>
-    </p>
-  </div>
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
+<a class="govuk-back-link" href="/antibody/{{version}}/order-test-kit/previous-house-infection">Back</a>
 {% endblock %}
 
 {% block content %}
