--- a/app/views/antibody/v7/refer-and-triage/mobile-number.html
+++ b/app/views/antibody/v7/refer-and-triage/mobile-number.html
@@ -26,9 +26,9 @@
             <span id="mobile-number-hint" class="govuk-body">
              When we're ready to invite you to order a test, we will send a text message.
             </span>
-            <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
+            <div class="govuk-radios govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="mobile-number-1" name="mobile-number" type="radio" value="Yes" data-aria-controls="conditional-mobile-number" {{ checked("mobile-number", "Yes") }}>
+                <input class="govuk-radios__input" id="mobile-number-1" name="mobile-number" type="radio" value="Yes"  {{ checked("mobile-number", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="mobile-number-1">
                   Yes, I have a mobile phone number where I can get the results
                 </label>
