--- a/app/views/antigen/v2/global-registration/antibody-test-person-1.html
+++ b/app/views/antigen/v2/global-registration/antibody-test-person-1.html
@@ -29,7 +29,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="antibody-test-person-1-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
-                If {{ data['first-name-person-1' or 'Pete'] }} {{ data['last-name-person-1' or 'Smith'] }} tests positive would they be willing to take an antibody test?
+                If {{ data['first-name-person-1'] or 'Pete' }} {{ data['last-name-person-1'] or 'Smith' }} tests positive would they be willing to take an antibody test?
               </h1>
             </legend>
             <span id="antibody-test-person-1-hint" class="govuk-body">
