--- a/app/views/antigen/v2/global-registration/antibody-test-confirmation-only-person-1.html
+++ b/app/views/antigen/v2/global-registration/antibody-test-confirmation-only-person-1.html
@@ -14,7 +14,12 @@
     </span>
   </p>
 </div>
-  <a class="govuk-back-link" href="/antigen/{{version}}/action3/people-confirmed">Back</a>
+
+{% if data['delivery-address-person-1'] == "No" %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/delivery-postcode-person-1">Back</a>
+{% else %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/delivery-address-person-1">Back</a>
+{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -23,7 +28,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/antigen/{{version}}/site-appointment-booking/find-test-site" method="post">
+      <form class="form" action="/antigen/{{version}}/action3/people-confirmed" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="antibody-test-confirmation-hint">
@@ -55,9 +60,21 @@
                 <tr class="govuk-table__row">
                   <th scope="row" class="govuk-table__header">Delivery address</th>
                   <td class="govuk-table__cell">
-                    {{ data['address'] or '1 Main Street'}}
-                    <br>
-                    {{ data['delivery-address-postcode-antibody'] or 'UB3 2RP' }}
+                    {% if data['delivery-address-person-1'] !== "No" %}
+                      {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                        {{ data['gp-address'] }}
+                      {% else %}
+                        {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
+                        {{ data['gp-postcode'] or 'LS1 3BE' }}
+                      {% endif %}
+                    {% else %}
+                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+                        {{ data['delivery-address-antibody'] }}
+                      {% else %}
+                        {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
+                        {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}
+                      {% endif %}
+                    {% endif %}
                   </td>
                   <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/delivery-postcode">Edit details</a></p></td>
                 </tr>
