--- a/app/views/antigen/v2/global-registration/antibody-test-confirmation-person-1.html
+++ b/app/views/antigen/v2/global-registration/antibody-test-confirmation-person-1.html
@@ -14,7 +14,11 @@
     </span>
   </p>
 </div>
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/delivery-postcode-person-1">Back</a>
+{% if data['delivery-address-person-1'] == "No" %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/delivery-postcode-person-1">Back</a>
+{% else %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/delivery-address-person-1">Back</a>
+{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -46,7 +50,7 @@
                 </tr>
               </thead>
               <tbody class="govuk-table__body">
-                {% if data['fingerprick-test-person-1'] == " ," %}
+                {% if data['fingerprick-test-person-1'] == "1,2" %}
                 <tr class="govuk-table__row">
                   <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}</th>
                   <td class="govuk-table__cell">
@@ -62,13 +66,25 @@
                 <tr class="govuk-table__row">
                   <th scope="row" class="govuk-table__header">Delivery address</th>
                   <td class="govuk-table__cell">
-                    {{ data['address'] or '1 Main Street'}}
-                    <br>
-                    {{ data['delivery-address-postcode-antibody'] or 'UB3 2RP' }}
+                    {% if data['delivery-address-person-1'] !== "No" %}
+                      {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                        {{ data['gp-address'] }}
+                      {% else %}
+                        {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
+                        {{ data['gp-postcode'] or 'LS1 3BE' }}
+                      {% endif %}
+                    {% else %}
+                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+                        {{ data['delivery-address-antibody'] }}
+                      {% else %}
+                        {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
+                        {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}
+                      {% endif %}
+                    {% endif %}
                   </td>
-                  <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/delivery-postcode">Edit details</a></p></td>
+                  <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/delivery-postcode-person-1">Edit details</a></p></td>
                 </tr>
-                {% elseif data['fingerprick-test-person-1'] == " " %}
+                {% elseif data['fingerprick-test-person-1'] == "1" %}
                 <tr class="govuk-table__row">
                   <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}</th>
                   <td class="govuk-table__cell">
@@ -78,13 +94,25 @@
                 <tr class="govuk-table__row">
                   <th scope="row" class="govuk-table__header">Delivery address</th>
                   <td class="govuk-table__cell">
-                    {{ data['address'] or '1 Main Street'}}
-                    <br>
-                    {{ data['delivery-address-postcode-antibody'] or 'UB3 2RP' }}
+                    {% if data['delivery-address-person-1'] !== "No" %}
+                      {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                        {{ data['gp-address'] }}
+                      {% else %}
+                        {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
+                        {{ data['gp-postcode'] or 'LS1 3BE' }}
+                      {% endif %}
+                    {% else %}
+                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+                        {{ data['delivery-address-antibody'] }}
+                      {% else %}
+                        {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
+                        {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}
+                      {% endif %}
+                    {% endif %}
                   </td>
-                  <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/delivery-postcode">Edit details</a></p></td>
+                  <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/delivery-postcode-person-1">Edit details</a></p></td>
                 </tr>
-                {% elseif data['fingerprick-test-person-1'] == "" %}
+                {% elseif data['fingerprick-test-person-1'] == "2" %}
                 <tr class="govuk-table__row">
                   <th scope="row" class="govuk-table__header">{{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Wilson' }}</th>
                   <td class="govuk-table__cell">
@@ -94,11 +122,23 @@
                 <tr class="govuk-table__row">
                   <th scope="row" class="govuk-table__header">Delivery address</th>
                   <td class="govuk-table__cell">
-                    {{ data['address'] or '1 Main Street'}}
-                    <br>
-                    {{ data['delivery-address-postcode-antibody'] or 'UB3 2RP' }}
+                    {% if data['delivery-address-person-1'] !== "No" %}
+                      {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                        {{ data['gp-address'] }}
+                      {% else %}
+                        {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
+                        {{ data['gp-postcode'] or 'LS1 3BE' }}
+                      {% endif %}
+                    {% else %}
+                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+                        {{ data['delivery-address-antibody'] }}
+                      {% else %}
+                        {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
+                        {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}
+                      {% endif %}
+                    {% endif %}
                   </td>
-                  <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/delivery-postcode">Edit details</a></p></td>
+                  <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/delivery-postcode-person-1">Edit details</a></p></td>
                 </tr>
                 {% endif %}
               </tbody>
