--- a/app/views/antigen/v2/global-registration/antibody-test-confirmation.html
+++ b/app/views/antigen/v2/global-registration/antibody-test-confirmation.html
@@ -1,24 +1,24 @@
 {% set version = "v2" %}
-{% set pageTitle = "Confirm people for antibody testing" %}
+{% set pageTitle = "Confirm people for testing" %}
 
 {% extends "includes/layout.html" %}
 
 {% block beforeContent %}
-<div class="govuk-phase-banner">
-  <p class="govuk-phase-banner__content">
-    <strong class="govuk-tag govuk-phase-banner__content__tag">
-      alpha
-    </strong>
-    <span class="govuk-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-    </span>
-  </p>
-</div>
-{% if data['delivery-address'] == "No" %}
-<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/delivery-postcode">Back</a>
-{% else %}
-<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/delivery-address">Back</a>
-{% endif %}
+  <div class="govuk-phase-banner">
+    <p class="govuk-phase-banner__content">
+      <strong class="govuk-tag govuk-phase-banner__content__tag">
+        alpha
+      </strong>
+      <span class="govuk-phase-banner__text">
+        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+      </span>
+    </p>
+  </div>
+  {% if data['fingerprick-test'] == "Yes" %}
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/delivery-address">Back</a>
+  {% else %}
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/fingerprick-test">Back</a>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -27,64 +27,86 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/antigen/{{version}}/action3/people-confirmed" method="post">
+      <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="antibody-test-confirmation-hint">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
-                {{ pageTitle }}
-              </h1>
-            </legend>
-            <span id="antibody-test-confirmation-hint" class="govuk-body">
-              If these people test positive for coronavirus we will send out an antibody kit to them.<br><br>
-              Once you've confirmed who's willing to take an antibody test, please continue to book your PCR test.
-            </span>
+      <p class="govuk-body">
+        You can <strong>add up to 3 people</strong> you live with for testing.<br><br>
+        If you need tests for <strong>more than 4 people</strong>, you'll need to complete this journey again and place a separate order.<br><br>
+        <strong>For test sites:</strong><br>
+        If you're arriving by motorbike, you can only take one other person you live with. They must wear full helmet and visor.<br><br>
+        If you’re arriving by car or small van, everyone must be in the same vehicle and sit next to a window that opens. You'll stay in your vehicle during your visit.<br><br>
+        <strong>For home testing:</strong><br>
+        You cannot order more than 4 home test kits at a time.
+      </p>
 
-            <table class="govuk-table">
-              <thead class="govuk-table__head">
-                <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header govuk-!-width-one-quarter"></th>
-                  <th scope="col" class="govuk-table__header govuk-!-width-one-half"></th>
-                  <th scope="col" class="govuk-table__header govuk-!-width-one-quarter"></th>
-                </tr>
-              </thead>
-              <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">
-                  <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}</th>
-                  <td class="govuk-table__cell">
-                  </td>
-                  <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}//global-registration/antibody-all-removed" class="govuk-link">Remove</a></p></td>
-                </tr>
-                <tr class="govuk-table__row">
-                  <th scope="row" class="govuk-table__header">Delivery address</th>
-                  <td class="govuk-table__cell">
-                    {% if data['delivery-address-person-1'] !== "No" %}
-                      {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
-                        {{ data['gp-address'] }}
-                      {% else %}
-                        {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
-                        {{ data['gp-postcode'] or 'LS1 3BE' }}
-                      {% endif %}
-                    {% else %}
-                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
-                        {{ data['delivery-address-antibody'] }}
-                      {% else %}
-                        {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
-                        {{ data['delivery-address-postcode-manual-antibody'] or 'LS1 3BE' }}
-                      {% endif %}
-                    {% endif %}
-                  </td>
-                  <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/delivery-postcode">Edit details</a></p></td>
-                </tr>
-              </tbody>
-            </table>
+      <table class="govuk-table">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter"></th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-half"></th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter"></th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">
+              {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}<br>
+              <span style="font-weight: normal;">{{ data['date-of-birth-day'] or '15 March 1988' }} {{ data['date-of-birth-month'] }} {{ data['date-of-birth-year'] }}</span>
+            </th>
+            <td class="govuk-table__cell">
+              {{ data['email-address'] or 'email@example.com' }}
+              <br>
+              {{ data['mobile-phone-number'] or '+447782808451' }}
+              <br>
+              {% if data['fingerprick-test'] == "Yes" or data['fingerprick-test-person-1'] == "1,2" or data['fingerprick-test-person-1'] == "1" %}
+              Opted in for antibody testing
+              {% endif %}
+            </td>
+            <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/check-your-answers">Edit details</a></p></td>
+          </tr>
+          {% if data['fingerprick-test'] == "Yes" or data['fingerprick-test-person-1'] == "1,2" or data['fingerprick-test-person-1'] == "1" %}
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">Delivery address</th>
+            <td class="govuk-table__cell">
+              {% if data['delivery-address-person-1'] !== "No" %}
+                {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                  {{ data['gp-address'] }}
+                {% else %}
+                  {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
+                  {{ data['gp-postcode'] or 'LS1 3BE' }}
+                {% endif %}
+              {% else %}
+                {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+                  {{ data['delivery-address-antibody'] }}
+                {% else %}
+                  {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
+                  {{ data['delivery-address-postcode-manual-antibody'] or 'LS1 3BE' }}
+                {% endif %}
+              {% endif %}
+            </td>
+            <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/delivery-postcode">Edit details</a></p></td>
+          </tr>
+          {% endif %}
+        </tbody>
+      </table>
 
+      <div class="govuk-warning-text govuk-!-margin-bottom-6 govuk-!-margin-top-5">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text govuk-!-font-size-19">
+          <span class="govuk-warning-text__assistive">Warning</span>
+          People you live with who do not have symptoms can only get a PCR test if they’ve been in contact with someone who’s tested positive for COVID-19, or they have been asked to get a PCR test. Ordering unnecessary tests is wasting NHS resources.
+        </strong>
+      </div>
 
-          </fieldset>
-        </div>
+      <form class="form" action="/antigen/{{version}}/order-home-test-kit/" method="post">
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        {% if data['fingerprick-test'] == "No" %}
+        <input class="govuk-input govuk-input--width-10" id="delivery-address-postcode-antibody-placeholder" name="delivery-address-postcode-antibody-placeholder" type="text" autocomplete="postal-code" value="" style="display: none;">
+
+        <input class="govuk-input govuk-input--width-10" id="delivery-address-postcode" name="delivery-address-postcode-antibody" type="text" autocomplete="postal-code" value="" style="display: none;">
+        {% endif %}
+
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
       </form>
 
