--- a/app/views/antigen/v2/global-registration/antibody-test-confirmation-person-1.html
+++ b/app/views/antigen/v2/global-registration/antibody-test-confirmation-person-1.html
@@ -56,25 +56,25 @@
                     {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}<br>
                     <span style="font-weight: normal;">
                     {% if data['date-of-birth-month'] == "1" or data['date-of-birth-month'] == "01" %}
-                    {{ data['date-of-birth-day'] }} January {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} January {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "2" or data['date-of-birth-month'] == "02" %}
-                    {{ data['date-of-birth-day'] }} February {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} February {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "3" or data['date-of-birth-month'] == "03" %}
-                    {{ data['date-of-birth-day'] }} March {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} March {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "4" or data['date-of-birth-month'] == "04" %}
-                    {{ data['date-of-birth-day'] }} April {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} April {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "5" or data['date-of-birth-month'] == "05" %}
-                    {{ data['date-of-birth-day'] }} May {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} May {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "6" or data['date-of-birth-month'] == "06" %}
-                    {{ data['date-of-birth-day'] }} June {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} June {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "7" or data['date-of-birth-month'] == "07" %}
-                    {{ data['date-of-birth-day'] }} July {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} July {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "8" or data['date-of-birth-month'] == "08" %}
-                    {{ data['date-of-birth-day'] }} August {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} August {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "9" or data['date-of-birth-month'] == "09" %}
-                    {{ data['date-of-birth-day'] }} September {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} September {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "10" %}
-                    {{ data['date-of-birth-day'] }} October {{ data['date-of-birth-person-1-year'] }}
+                    {{ data['date-of-birth-day'] }} October {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "11" %}
                     {{ data['date-of-birth-day'] }} November {{ data['date-of-birth-year'] }}
                     {% elseif data['date-of-birth-month'] == "12" %}
@@ -100,29 +100,29 @@
                     {{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Wilson' }}<br>
                     <span style="font-weight: normal;">
                       {% if data['date-of-birth-person-1-month'] == "1" or data['date-of-birth-person-1-month'] == "01" %}
-                      {{ data['date-of-birth-person-1-day'] }} January {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} January {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "2" or data['date-of-birth-person-1-month'] == "02" %}
-                      {{ data['date-of-birth-person-1-day'] }} February {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} February {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "3" or data['date-of-birth-person-1-month'] == "03" %}
-                      {{ data['date-of-birth-person-1-day'] }} March {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} March {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "4" or data['date-of-birth-person-1-month'] == "04" %}
-                      {{ data['date-of-birth-person-1-day'] }} April {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} April {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "5" or data['date-of-birth-person-1-month'] == "05" %}
-                      {{ data['date-of-birth-person-1-day'] }} May {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} May {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "6" or data['date-of-birth-person-1-month'] == "06" %}
-                      {{ data['date-of-birth-person-1-day'] }} June {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} June {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "7" or data['date-of-birth-person-1-month'] == "07" %}
-                      {{ data['date-of-birth-person-1-day'] }} July {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} July {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "8" or data['date-of-birth-person-1-month'] == "08" %}
-                      {{ data['date-of-birth-person-1-day'] }} August {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} August {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "9" or data['date-of-birth-person-1-month'] == "09" %}
-                      {{ data['date-of-birth-person-1-day'] }} September {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} September {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "10" %}
-                      {{ data['date-of-birth-person-1-day'] }} October {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} October {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "11" %}
-                      {{ data['date-of-birth-person-1-day'] }} November {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} November {{ data['date-of-birth-person-1-year'] }}
                       {% elseif data['date-of-birth-person-1-month'] == "12" %}
-                      {{ data['date-of-birth-person-1-day'] }} December {{ data['date-of-birth-year-person-1'] }}
+                      {{ data['date-of-birth-person-1-day'] }} December {{ data['date-of-birth-person-1-year'] }}
                       {% else %}
                       15 March 2002
                       {% endif %}
