--- a/app/views/antigen/v2/global-registration/antibody-test-confirmation-person-1.html
+++ b/app/views/antigen/v2/global-registration/antibody-test-confirmation-person-1.html
@@ -27,7 +27,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/antigen/{{version}}/action3/people-confirmed" method="post">
+      <form class="form" action="/antigen/{{version}}/order-home-test-kit/" method="post">
 
         <div class="govuk-form-group">
             <h1 class="govuk-heading-xl">{{ pageTitle }}</h1> 
