--- a/app/views/antigen/v2/order-home-test-kit/sms-messages/02-antibody-1.html
+++ b/app/views/antigen/v2/order-home-test-kit/sms-messages/02-antibody-1.html
@@ -91,7 +91,7 @@
 {% block bodyEnd %}
 <div class="proto-action big">
   <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/03-test-result-2">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">SMS - 3 days post positive PCR result</div>
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 3</div>
   </a>
 </div>
 {% endblock %}
