--- a/app/views/antigen/v2/order-home-test-kit/sms-messages/04-antibody-2.html
+++ b/app/views/antigen/v2/order-home-test-kit/sms-messages/04-antibody-2.html
@@ -92,7 +92,7 @@
 {% block bodyEnd %}
 <div class="proto-action big">
   <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/05-antibody-3">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">SMS - Antibody result</div>
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 5</div>
   </a>
 </div>
 {% endblock %}
