--- a/app/views/antigen/v2/order-home-test-kit/sms-messages/05-antibody-3.html
+++ b/app/views/antigen/v2/order-home-test-kit/sms-messages/05-antibody-3.html
@@ -94,7 +94,7 @@
 {% block bodyEnd %}
 <div class="proto-action big">
   <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/06-antibody-4">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">SMS - 25 days post positive result</div>
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 6</div>
   </a>
 </div>
 {% endblock %}
