--- a/app/views/antigen/v2/order-home-test-kit/sms-messages/06-antibody-4.html
+++ b/app/views/antigen/v2/order-home-test-kit/sms-messages/06-antibody-4.html
@@ -91,7 +91,7 @@
 {% block bodyEnd %}
 <div class="proto-action big">
   <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/07-antibody-5">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">SMS - 3 days after 25 days</div>
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 7</div>
   </a>
 </div>
 {% endblock %}
