--- a/app/views/antigen/v2/order-home-test-kit/sms-messages/07-antibody-5.html
+++ b/app/views/antigen/v2/order-home-test-kit/sms-messages/07-antibody-5.html
@@ -92,7 +92,7 @@
 {% block bodyEnd %}
 <div class="proto-action big">
   <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/08-antibody-6">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">SMS - 2nd antibody test result</div>
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 8</div>
   </a>
 </div>
 {% endblock %}
