--- a/app/views/antigen/v2/sms-messages/04-antibody-2.html
+++ b/app/views/antigen/v2/sms-messages/04-antibody-2.html
@@ -73,9 +73,10 @@
         <h2 class="govuk-heading-s">UK_Gov</h2>
         <p class="app-text-message__text">
           Dear {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}<br><br>
-          Your antibody test kit arrives in 2-3 days.<br><br>
-          It is much easier to do the blood test if you follow the tips on the "how to" video and always read the instructions in your test kit.<br><br>
-          Go to: <a class="govuk-link" href="https://www.gov.uk/taking-antibody-blood-sample">www.gov.uk/taking-antibody-blood-sample</a>
+          You should have received your antibody test kit in the post.<br><br>
+          This test helps the NHS find out more about coronavirus and how it spreads.<br><br>
+          Read the kit's instructions on how to take the test and return it.<br><br>
+          Take the test as soon as you can and post it back. It's safe to leave home to post the test while you're self-isolating.
         </p>
       </div>
 
@@ -90,8 +91,8 @@
 
 {% block bodyEnd %}
 <div class="proto-action big">
-  <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/03-test-result-2">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 3</div>
+  <a href="/antigen/{{version}}/sms-messages/05-antibody-3">
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 5</div>
   </a>
 </div>
 {% endblock %}
