--- a/app/views/antigen/v2/sms-messages/06-antibody-4.html
+++ b/app/views/antigen/v2/sms-messages/06-antibody-4.html
@@ -73,10 +73,9 @@
         <h2 class="govuk-heading-s">UK_Gov</h2>
         <p class="app-text-message__text">
           Dear {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}<br><br>
-          You should have received your antibody test kit in the post.<br><br>
-          This test helps the NHS find out more about coronavirus and how it spreads.<br><br>
-          Read the kit's instructions on how to take the test and return it.<br><br>
-          Take the test as soon as you can and post it back. It's safe to leave home to post the test while you're self-isolating.
+          Your antibody test kit arrives in 2-3 days.<br><br>
+          It is much easier to do the blood test if you follow the tips on the "how to" video and always read the instructions in your test kit.<br><br>
+          Go to: <a class="govuk-link" href="https://www.gov.uk/taking-antibody-blood-sample">www.gov.uk/taking-antibody-blood-sample</a>
         </p>
       </div>
 
@@ -91,8 +90,8 @@
 
 {% block bodyEnd %}
 <div class="proto-action big">
-  <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/08-antibody-6">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 8</div>
+  <a href="/antigen/{{version}}/sms-messages/07-antibody-5">
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 7</div>
   </a>
 </div>
 {% endblock %}
