--- a/app/views/antigen/v2/sms-messages/05-antibody-3.html
+++ b/app/views/antigen/v2/sms-messages/05-antibody-3.html
@@ -73,10 +73,12 @@
         <h2 class="govuk-heading-s">UK_Gov</h2>
         <p class="app-text-message__text">
           Dear {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}<br><br>
-          You should have received your antibody test kit in the post.<br><br>
-          This test helps the NHS find out more about coronavirus and how it spreads.<br><br>
-          Read the kit's instructions on how to take the test and return it.<br><br>
-          Take the test as soon as you can and post it back. It's safe to leave home to post the test while you're self-isolating.
+          Unfortunately, your coronavirus (COVID-19) antibody test could not be processed.<br>
+          There can be many reasons for this. It’s usually because of a problem with your sample, or the labelling of your sample.<br>
+          This means it’s not possible to say if you’ve had COVID-19 in the last 6 months.<br>
+          You can register for a new test by going to www.gov.uk/register-coronavirus-antibody-test.<br>
+          It’s important to keep following COVID-19 advice.<br><br>
+          If you were sent this antibody test because you recently tested positive for coronavirus, you do not need to take any further action. There is no need for you to order another antibody test.
         </p>
       </div>
 
@@ -91,8 +93,8 @@
 
 {% block bodyEnd %}
 <div class="proto-action big">
-  <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/05-antibody-3">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 5</div>
+  <a href="/antigen/{{version}}/sms-messages/06-antibody-4">
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 6</div>
   </a>
 </div>
 {% endblock %}
