--- a/app/views/antigen/v2/sms-messages/04-antibody-2.html
+++ b/app/views/antigen/v2/sms-messages/04-antibody-2.html
@@ -73,10 +73,8 @@
         <h2 class="govuk-heading-s">UK_Gov</h2>
         <p class="app-text-message__text">
           Dear {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}<br><br>
-          You should have received your antibody test kit in the post.<br><br>
-          This test helps the NHS find out more about coronavirus and how it spreads.<br><br>
-          Read the kit's instructions on how to take the test and return it.<br><br>
-          Take the test as soon as you can and post it back. It's safe to leave home to post the test while you're self-isolating.
+          You should have received an antibody test kit in the post. Take the test as soon as possible. The instructions in the kit explain how to take the test. This video is also helpful: <a href="https://www.youtube.com/watch?v=okTozcGMDlU&ab_channel=DepartmentofHealthandSocialCare">https://www.youtube.com/watch?v=okTozcGMDlU&ab_channel=DepartmentofHealthandSocialCare</a>.<br><br>
+          After you've completed the test, post it back as soon as possible in your nearest Royal Mail priority postbox. You can post it any day of the week except Saturday. Find a local priority postbox at <a href="https://www.royalmail.com/services-near-you#/">https://www.royalmail.com/services-near-you#/</a>. It's safe to leave home to post a test while you're self-isolating.
         </p>
       </div>
 
