--- a/app/views/antigen/v2/sms-messages/05-antibody-3.html
+++ b/app/views/antigen/v2/sms-messages/05-antibody-3.html
@@ -76,7 +76,7 @@
           Unfortunately, your coronavirus (COVID-19) antibody test could not be processed.<br>
           There can be many reasons for this. It’s usually because of a problem with your sample, or the labelling of your sample.<br>
           This means it’s not possible to say if you’ve had COVID-19 in the last 6 months.<br>
-          You can register for a new test by going to www.gov.uk/register-coronavirus-antibody-test.<br>
+          You can register for a new test by going to <a href="https://www.gov.uk/register-coronavirus-antibody-test">www.gov.uk/register-coronavirus-antibody-test</a>.<br>
           It’s important to keep following COVID-19 advice.<br><br>
           If you were sent this antibody test because you recently tested positive for coronavirus, you do not need to take any further action. There is no need for you to order another antibody test.
         </p>
