--- a/app/views/antigen/v2/sms-messages/02-antibody-1.html
+++ b/app/views/antigen/v2/sms-messages/02-antibody-1.html
@@ -75,8 +75,8 @@
           Dear {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}<br><br>
           Your antibody test kit will arrive in 2 to 3 days.<br><br>
           Read the instructions in your test kit as soon as it arrives. They explain how to do the test. Then take the test as soon as you can.<br><br>
-          You will find it easier to do the blood test if you watch this video: <a href="https://www.youtube.com/watch?v=oktozcgmdlu" class="govuk-link">https://www.youtube.com/watch?v=oktozcgmdlu</a>. The video shows you how to prepare for the test, for example by drinking plenty of water the day before, and on the day itself. It also shows you how to collect your blood sample.<br><br>
-          For more information about antibody testing, go to <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/testing/antibody-testing-to-check-if-youve-had-coronavirus/" class="govuk-link">https://www.nhs.uk/conditions/coronavirus-covid-19/testing/antibody-testing-to-check-if-youve-had-coronavirus/</a>
+          You will find it easier to do the blood test if you watch this video: <a href="https://www.youtube.com/watch?v=okTozcGMDlU&ab_channel=DepartmentofHealthandSocialCare">https://www.youtube.com/watch?v=okTozcGMDlU&ab_channel=DepartmentofHealthandSocialCare</a>. The video shows you how to prepare for the test, for example by drinking plenty of water the day before, and on the day itself. It also shows you how to collect your blood sample.<br><br>
+          For more information about antibody testing, go to <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/testing/antibody-testing-to-check-if-youve-had-coronavirus/">https://www.nhs.uk/conditions/coronavirus-covid-19/testing/antibody-testing-to-check-if-youve-had-coronavirus/</a>
         </p>
       </div>
 
