--- a/app/views/antigen/v2/sms-messages/08-antibody-6.html
+++ b/app/views/antigen/v2/sms-messages/08-antibody-6.html
@@ -74,11 +74,11 @@
         <p class="app-text-message__text">
           Dear {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}<br><br>
           Thank you for doing a coronavirus (COVID-19) antibody test.<br><br>
-          No antibodies were found in your blood sample.<br><br>
-          This means it’s unlikely you’ve had COVID-19 in the last 6 months.<br><br>
-          This test only looked for antibodies from an infection, rather than antibodies made after the vaccination.<br><br>
-          If you took this test because you tested positive for COVID-19 in the last 2 weeks, we would not expect to find antibodies to your current infection, only previous infections.<br><br>
-          It’s important to keep following coronavirus advice.<br><br>
+          Antibodies were found in your blood sample.<br><br>
+          This means it’s likely you’ve had COVID-19 in the last 6 months.<br><br>
+          This result does not guarantee you are fully immune (protected) from COVID-19. It’s still possible to get the virus again or spread it, although your risk is reduced if you’ve had the vaccine or already been infected.<br><br>
+          It’s important to keep following COVID-19 advice.<br><br>
+          If you took this test because you tested positive for COVID-19 in the last 2 weeks, it’s unlikely the antibodies detected are from your recent infection. They’re more likely to be from a previous infection.
         </p>
       </div>
 
