--- a/app/views/antigen/v2/sms-messages/04-antibody-2.html
+++ b/app/views/antigen/v2/sms-messages/04-antibody-2.html
@@ -73,8 +73,9 @@
         <h2 class="govuk-heading-s">UK_Gov</h2>
         <p class="app-text-message__text">
           Dear {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}<br><br>
-          You should have received an antibody test kit in the post. Take the test as soon as possible. The instructions in the kit explain how to take the test. This video is also helpful: <a href="https://www.youtube.com/watch?v=okTozcGMDlU&ab_channel=DepartmentofHealthandSocialCare">https://www.youtube.com/watch?v=okTozcGMDlU&ab_channel=DepartmentofHealthandSocialCare</a>.<br><br>
-          After you've completed the test, post it back as soon as possible in your nearest Royal Mail priority postbox. You can post it any day of the week except Saturday. Find a local priority postbox at <a href="https://www.royalmail.com/services-near-you#/">https://www.royalmail.com/services-near-you#/</a>. It's safe to leave home to post a test while you're self-isolating.
+          You should have received an antibody test kit in the post. Take the test as soon as possible. The instructions in the kit explain how to take the test.<br><br>
+          <!-- This video is also helpful: <a href="https://www.youtube.com/watch?v=okTozcGMDlU&ab_channel=DepartmentofHealthandSocialCare">https://www.youtube.com/watch?v=okTozcGMDlU&ab_channel=DepartmentofHealthandSocialCare</a>.<br><br> -->
+          After you've completed the test, post it back as soon as possible in your nearest Royal Mail priority postbox. You can post it any day of the week except Saturday. Find a local priority postbox on Royal Mail's website at: <a href="https://www.royalmail.com/services-near-you#/">https://www.royalmail.com/services-near-you#/</a>. You can leave home to post a test kit while self-isolating.
         </p>
       </div>
 
